Create content to subpage stew.html
Create template and fill it with information and image:
    - img
    - headers
    - unordered list
    - orderd list

--- a/recipes/stew.html
+++ b/recipes/stew.html
@@ -7,6 +7,43 @@
     <body>
         <h1>Stew</h1>
 
+        <img src="https://ichef.bbci.co.uk/food/ic/food_16x9_1600/recipes/slow_cooker_roast_beef_94008_16x9.jpg" alt="Ready portion of stew on a plate" height="512">
+        <h2>Description</h2>
+        <p>A delicious warming dish with lots of vegetables and melting meat, perfect for cold winter evenings.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 kg pork shoulder</li>
+            <li>2 medium red peppers - 500 g</li>
+            <li>2 large carrots - 300 g</li>
+            <li>3 medium onions - 300 g</li>
+            <li>4 large cloves of garlic</li>
+            <li>70 g pork or goose lard</li>
+            <li>2 cups vegetable or meat broth - 500 ml</li>
+            <li>3 tablespoons tomato paste</li>
+            <li>2 tablespoons of sweet paprika</li>
+            <li>half a teaspoon each of salt and pepper</li>
+            <li>a pinch of chili</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li><p>Cut the meat into small pieces for one bite. Try to make the meat pieces about the same size, that is, up to 2 x 2 cm. Put the spices in the bowl with the meat pieces as well: 2 tablespoons of sweet paprika, half a teaspoon each of salt and pepper, and a nominal pinch of chili. Peel four large cloves of garlic and put them through a press. If you don't have fresh garlic, add one tablespoon of dried garlic. Thoroughly mix the meat with the spices and garlic.</p></li>
+            <li><p>Preheat a large and deep skillet and melt 20 grams of good quality pork or goose lard in it (leave the remaining 50 grams for frying vegetables). Put the pieces of meat into the pan. Fry them on a slightly higher than medium burner power for 25 minutes (the same length of time fry both ham and shoulder or neck meat). Stir the meat from time to time. Also sauté them all the time without a lid.</p></li>
+            <li><p>While the meat is frying, prepare the vegetables. You'll need two large or three medium onions, two larger carrots and two medium-sized red peppers. You can replace the onions with a large leek. As for the peppers, you can also swap one red bell pepper for a yellow or orange bell pepper.</p></li>
+            <li><p>Preheat a medium-sized skillet and melt the remaining 50 grams of lard in it. Add the peeled and cut into small pieces onion. I sliced it into feathers, which I cut in half more. Fry it like this for five minutes and then also add peeled and half-sliced carrots</p></li>
+            <li><p>Stir the whole thing and sauté on a slightly lower than medium burner power for another 15 minutes. Do not cover the pan with a lid. Stir the vegetables every few minutes with a wooden spoon.</p></li>
+            <li><p>After that, add the peppers still cleaned from the seed nest and cut into smaller pieces. Stir the vegetables and fry the last 10 minutes.</p></li>
+            <li><p>Put all the vegetables from the skillet into a deep pan with the already sautéed meat. Also pour in two cups (500 ml) of homemade vegetable or meat broth. Stir the pork stew thoroughly and cook for 20 minutes on low burner power (no lid).</p></li>
+            <li><p>Finally, add tomato paste to the stew. I added three tablespoons of concentrate, but you can add a little less or more. The stew with the addition of the concentrate will become thicker and more luscious. If instead of concentrate you add, for example, pureed tomatoes or also peeled and chopped fresh tomatoes, the sauce in the stew will be a little thinner.</p></li>
+            <li><p>Season to taste, <b>enjoy!</b></p></li>
+        </ol>
+
         <a href="../index.html">Home</a>
     </body>
 </html>
+
+
+
+
+
+
+
