Create other subpages and fill README.md
To complete recipe page, create more subpage, with content.
Add README.md description to this project.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
@@ -7,6 +7,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/stew.html">Stew</a>
+        <ul>
+            <li><a href="./recipes/stew.html">Stew</a></li>
+            <li><a href="./recipes/pizza.html">Pizza capricciosa</a></li>
+            <li><a href="./recipes/breton_beans.html">Breton beans</a></li>
+        </ul>
     </body>
 </html>
